--- a/.travis.yml
+++ b/.travis.yml
@@ -49,4 +49,6 @@ script:
   - bash updateZ01tools.sh 
 
   ## run scripts
-  - python3 Projetos/A-AmbienteDesenvolvimento/testeAmbienteDesenvolvimento.py
+script:
+   - python3 Projetos/A-AmbienteDesenvolvimento/testeAmbienteDesenvolvimento.py
+   - python3 Projetos/B-LogicaCombinacional/testeLogicaCombinacional.py
